--- a/style.css
+++ b/style.css
@@ -1516,6 +1516,8 @@ nav.navbar-white .fa-bars {
 }
 
 .alert.success {
+    position: absolute; right: 50px; top: 110px;
+    width: fit-content;
     background-color: #04AA6D;
     padding: 20px;
     color: white;
