--- a/style.css
+++ b/style.css
@@ -340,6 +340,13 @@ datalist option:hover {
     color: #333;
 }
 
+.sub-title1 {
+    margin: 50px 0 20px 580px;
+    font-size: 2.2vw;
+    font-weight: 500;
+    color: #333;
+}
+
 .exclusives {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -668,7 +675,7 @@ nav .fa-bars {
 
     .sub-title {
         font-size: 6vw;
-    }
+    }    
 
     .cta {
         padding: 15% 5%;
