--- a/style.css
+++ b/style.css
@@ -675,7 +675,7 @@ nav .fa-bars {
 
     .sub-title {
         font-size: 6vw;
-    }    
+    }
 
     .cta {
         padding: 15% 5%;
@@ -738,6 +738,15 @@ nav.navbar-white .fa-bars {
     background: #ff5361;
 }
 
+::-webkit-scrollbar{
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb{
+    visibility: hidden;
+    border-radius: 10px;
+}
+
 .list-container {
     margin-top: 50px;
     display: flex;
@@ -757,6 +766,40 @@ nav.navbar-white .fa-bars {
     color: #333;
     font-weight: 600;
     margin-bottom: 30px;
+}
+
+.sidebar-scroll{
+    position: absolute;
+    top: auto;
+    left: 0;
+    width: 800px;
+    height: 100%;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    padding: 20px 5px 0 20px;
+    z-index: 100;
+}
+
+header h2{
+    font-size: 24px;
+    color: #000;
+    padding-bottom: 5px;
+}
+
+.scrollbox{
+    overflow: auto;
+    padding-right: 10px;
+    visibility: hidden;
+}
+
+.scrollbox-inner,.scrollbox:hover{
+    visibility: visible;
+}
+
+.scrollbox-inner{
+    font-size: 16px;
+    color: #fff;
 }
 
 .house {
@@ -806,6 +849,19 @@ nav.navbar-white .fa-bars {
 .house-price h4 span {
     font-size: 16px;
     font-weight: 500;
+}
+
+.content-map{
+    position: relative;
+    left: 800px;
+    width: calc(100% - 800px);
+    height: 100vh;
+    display: flex;
+}
+
+.content-map iframe{
+    display: flex;
+    width: 100%;
 }
 
 .sidebar {
